--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,12 @@
     <dimen name="padding_big">32dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="padding_small">8dp</dimen>
+    <!-- Cell size for the grid layout -->
+    <dimen name="cell_size">32dp</dimen>
+    <dimen name="hit_size">24dp</dimen>
+    <dimen name="ship_size">20dp</dimen>
+    <dimen name="target_size">16dp</dimen>
+    <dimen name="none_size">0dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
