--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="cloud_color">#D9D9D9</color>
     <color name="water_color">#2A7ACC</color>
     <color name="ship_color">#5D5C5C</color>
-    <color name="target_color">#929090</color>
+    <color name="target_color">#72626262</color>
     <color name="hit_color">#CFC50404</color>
     <color name="user_online_color">#61A807</color>
 </resources>
