--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_container">24dp</dimen>
+    <dimen name="profile_image_size">40dp</dimen>
+    <dimen name="button_min_width">200dp</dimen>
+
+    <!-- General paddings -->
     <dimen name="padding_title">40dp</dimen>
     <dimen name="padding_larger">48dp</dimen>
     <dimen name="padding_large">32dp</dimen>
-    <dimen name="content_padding">24dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="padding_small">8dp</dimen>
+
     <!-- Cell size for the grid layout -->
     <dimen name="cell_size">32dp</dimen>
     <dimen name="cell_padding">1dp</dimen>
