--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,10 @@
 <resources>
     <dimen name="padding_container">24dp</dimen>
     <dimen name="profile_image_size">40dp</dimen>
+    <dimen name="status_size">16dp</dimen>
     <dimen name="button_min_width">200dp</dimen>
+    <dimen name="card_elevation">8dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
 
     <!-- General paddings -->
     <dimen name="padding_title">40dp</dimen>
